# rust-app

./: Cargo.toml
migrations/2023-05-30-022240_create_users/: up.sql
src/: main.rs  model.rs  schema.rs
