[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8"
log = "^0.4"
