[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
mysql = "24.0.0"
env_logger = "0.8"
log = "^0.4"
r2d2 = "0.8.10"
r2d2_mysql = "23.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.79"
